--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -15,4 +15,11 @@
     <ProjectReference Include="..\Components\Components.csproj" />
   </ItemGroup>
 
+  <Target Name="CopyDevEntry" Condition="'$(Configuration)' == 'Debug'" AfterTargets="Build">
+    <Copy SourceFiles="Entries/index.dev.html" DestinationFiles="wwwroot/index.html" />
+  </Target>
+  <Target Name="CopyProdIndex" Condition="'$(Configuration)' == 'Release'" AfterTargets="Build">
+    <Copy SourceFiles="Entries/index.prod.html" DestinationFiles="wwwroot/index.html" />
+  </Target>
+
 </Project>
